Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,40 +1,67 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
-
     <title>Projectile-motion by Fogest</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="javascripts/respond.js"></script>
+    <!--[if lt IE 9]>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <!--[if lt IE 8]>
+    <link rel="stylesheet" href="stylesheets/ie.css">
+    <![endif]-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+
   </head>
-
   <body>
+      <div id="header">
+        <nav>
+          <li class="fork"><a href="https://github.com/Fogest/Projectile-Motion">View On GitHub</a></li>
+          <li class="downloads"><a href="https://github.com/Fogest/Projectile-Motion/zipball/master">ZIP</a></li>
+          <li class="downloads"><a href="https://github.com/Fogest/Projectile-Motion/tarball/master">TAR</a></li>
+          <li class="title">DOWNLOADS</li>
+        </nav>
+      </div><!-- end header -->
 
-    <header>
-      <div class="container">
-        <h1>Projectile-motion</h1>
-        <h2></h2>
+    <div class="wrapper">
 
-        <section id="downloads">
-          <a href="https://github.com/Fogest/Projectile-Motion/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/Fogest/Projectile-Motion/tarball/master" class="btn">Download as .tar.gz</a>
-          <a href="https://github.com/Fogest/Projectile-Motion" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
-      </div>
-    </header>
+      <section>
+        <div id="title">
+          <h1>Projectile-motion</h1>
+          <p></p>
+          <hr>
+          <span class="credits left">Project maintained by <a href="https://github.com/Fogest">Fogest</a></span>
+          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
+        </div>
 
-    <div class="container">
-      <section id="main_content">
         <h1>
 <a name="physics-project-on-projectile-motion---by-justin-visser" class="anchor" href="#physics-project-on-projectile-motion---by-justin-visser"><span class="octicon octicon-link"></span></a>Physics Project on Projectile Motion - By Justin Visser</h1>
 
-<p><img src="/images/logo.png" alt="GitHub Logo"></p>
-      </section>
-    </div>
+<p>Projectile motion consists of an components. Some of the components that can be applied to pojectile motion are:</p>
 
+<ul>
+<li>Kinematic's to determine the vertical and horizontal components of the motion of projectile</li>
+<li>Newton's Laws - Projectile should continue in a straight line in the direction it is fired from, but due to some factors this is not true. Mainly a projectile is affected by gravity, thus causing an arc shape (as examples below will show)</li>
+<li>Gravitational and Kinetic energies change as the projectile moves through the air. We can analyze what these energies could be at certain points</li>
+</ul><p>Utilizing Java I was able to create a mock projectile simulation (see lower in document for code samples)</p>
+
+<h2>
+<a name="demo" class="anchor" href="#demo"><span class="octicon octicon-link"></span></a>Demo</h2>
+
+<p><a href="Click%20to%20download%20demo%20file!">https://github.com/Fogest/Projectile-Motion/raw/master/javatest/run.jnlp</a></p>
+
+<h2>
+<a name="image-explanation" class="anchor" href="#image-explanation"><span class="octicon octicon-link"></span></a>Image Explanation</h2>
+
+<p><img src="https://raw.github.com/Fogest/Projectile-Motion/master/images/Initial%20example-sketch%20and%20fbd.png" alt="Initial Image"></p>
+      </section>
+
+    </div>
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
               <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
