Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <h2>
 <a name="demo" class="anchor" href="#demo"><span class="octicon octicon-link"></span></a>Demo</h2>
 
-<p><a href="Click%20to%20download%20demo%20file!">https://github.com/Fogest/Projectile-Motion/raw/master/javatest/run.jnlp</a></p>
+<p><a href="Click%20to%20download%20demo%20file">https://github.com/Fogest/Projectile-Motion/raw/master/javatest/run.jnlp</a></p>
 
 <h2>
 <a name="image-explanation" class="anchor" href="#image-explanation"><span class="octicon octicon-link"></span></a>Image Explanation</h2>
