Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -52,12 +52,29 @@
 <h2>
 <a name="demo" class="anchor" href="#demo"><span class="octicon octicon-link"></span></a>Demo</h2>
 
-<p><a href="Click%20to%20download%20demo%20file">https://github.com/Fogest/Projectile-Motion/raw/master/javatest/run.jnlp</a></p>
+<p><a href="https://github.com/Fogest/Projectile-Motion/raw/master/javatest/run.jnlp">Click to download demo file</a></p>
 
 <h2>
 <a name="image-explanation" class="anchor" href="#image-explanation"><span class="octicon octicon-link"></span></a>Image Explanation</h2>
 
 <p><img src="https://raw.github.com/Fogest/Projectile-Motion/master/images/Initial%20example-sketch%20and%20fbd.png" alt="Initial Image"></p>
+
+<h2>
+<a name="calculations-example" class="anchor" href="#calculations-example"><span class="octicon octicon-link"></span></a>Calculations Example</h2>
+
+<p><img src="https://raw.github.com/Fogest/Projectile-Motion/master/images/calculations%20for%20first.png" alt="Calculations Example"></p>
+
+<h2>
+<a name="analyzing-the-energies" class="anchor" href="#analyzing-the-energies"><span class="octicon octicon-link"></span></a>Analyzing the Energies</h2>
+
+<p><img src="https://raw.github.com/Fogest/Projectile-Motion/master/images/energy%20for%20first%20example.png" alt="energies"></p>
+
+<h3>
+<a name="references" class="anchor" href="#references"><span class="octicon octicon-link"></span></a>References</h3>
+
+<ol>
+<li>"Maximum Range." Physics Classroom. N.p., n.d. Web. 21 June 2013.</li>
+</ol>
       </section>
 
     </div>
