Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -69,6 +69,32 @@
 
 <p><img src="https://raw.github.com/Fogest/Projectile-Motion/master/images/energy%20for%20first%20example.png" alt="energies"></p>
 
+<h2>
+<a name="comparing-other-angles" class="anchor" href="#comparing-other-angles"><span class="octicon octicon-link"></span></a>Comparing other angles</h2>
+
+<p><a href="https://github.com/Fogest/Projectile-Motion/raw/master/javatest/2_75angle/run.jnlp">75 Degree Angle Example</a></p>
+
+<p><a href="https://github.com/Fogest/Projectile-Motion/raw/master/javatest/3_25angle/run.jnlp">25 Degree Angle Example</a></p>
+
+<h3>
+<a name="comparing-the-three" class="anchor" href="#comparing-the-three"><span class="octicon octicon-link"></span></a>Comparing the three</h3>
+
+<p><img src="https://raw.github.com/Fogest/Projectile-Motion/master/images/comparing.png" alt="Comparing the three"></p>
+
+<h3>
+<a name="conclusion-relating-to-angles" class="anchor" href="#conclusion-relating-to-angles"><span class="octicon octicon-link"></span></a>Conclusion relating to angles</h3>
+
+<p>It is clear that achieving the optimal range can be achieved at a 45 degree angle (ref 1). 45 degrees is in between 0 and 90 degrees, allowing for an even amount of of distance covered both in the x and y axis. If one has a lot more than the other, there is going to be less range. Look at the 75 degree angle, there is a large y value compared to the x value, therefore resulting in less range. On the other hand, at 25 degrees there is a large x value and a very small y value, therefore also resulting in a short and quick projection. 45 degrees is therefore the optimal angle.</p>
+
+<h2>
+<a name="gravity" class="anchor" href="#gravity"><span class="octicon octicon-link"></span></a>Gravity</h2>
+
+<p>As seen in all the examples so far, the projectile experienced a parabolic curve, due to being affected by earths gravity at -9.8 m/s. There is no longer a parabolic curve if gravity is eliminated (See example below)</p>
+
+<p><a href="https://github.com/Fogest/Projectile-Motion/raw/master/javatest/4_no_gravity/run.jnlp">Projectile Motion with no Gravity</a></p>
+
+<p>With no gravity a projectile just continues in a straight line in the direction it was shot in. The projectile would continue on forever, unless it hit something else. This is dictated by Newtons first law, the projectile should continue at a constant velocity, unless acted upon by an external force</p>
+
 <h3>
 <a name="references" class="anchor" href="#references"><span class="octicon octicon-link"></span></a>References</h3>
 
