--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
 
 <ol>
 <li>"Maximum Range." Physics Classroom. N.p., n.d. Web. 21 June 2013.</li>
+<li>Hirsch, Alan, David Martindale, Steve Bibla, and Charles Stewart. Physics 11. [S.l.]: Itp Nelson, 2002. Print.</li>
 </ol>
       </section>
 
